# cmake-apple-platforms

./: .gitignore  CMakeLists.txt  Makefile
.github/workflows/: makefile.yml
scripts/: build.sh
src/: MyFramework.c  MyFramework.h
